fix: home banner overlaping next component

--- a/client/src/components/molecules/ProductInovation/style.scss
+++ b/client/src/components/molecules/ProductInovation/style.scss
@@ -6,7 +6,7 @@
   background: #032939;
 
   .swiper-container {
-    width: 86vw;
+    width: 82vw;
     margin: 0 auto;
     padding-bottom: 4.1vw;
 
