--- a/client/src/components/organisms/DistributionProduct/style.scss
+++ b/client/src/components/organisms/DistributionProduct/style.scss
@@ -9,7 +9,7 @@
 
   .distribute-heading {
     width: 80.2vw;
-    margin: 3.75vw 5.06vw;
+    margin: 3.75vw 9.86vw;
     color: white;
     font-family: $OpenSans;
     font-size: 3.19vw;
